--- a/client/src/index.css
+++ b/client/src/index.css
@@ -41,6 +41,8 @@
     .fc .fc-toolbar-chunk{
         display: flex;
         flex-direction: column;
+        align-items: center;
+        justify-content: center;
     }
     .fc .fc-button-group{
         display: flex;
@@ -52,5 +54,6 @@
     .fc button.fc-today-button {
     border-radius: 10px !important;
     padding: 4px 2px;
+    margin: 1px;
     }
   }
