adding client socket io

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -57,3 +57,14 @@
     margin: 1px;
     }
   }
+
+  @layer utilities {
+    .hide-scrollbar {
+      -ms-overflow-style: none; /* For Internet Explorer and Edge */
+      scrollbar-width: none; /* For Firefox */
+    }
+  
+    .hide-scrollbar::-webkit-scrollbar {
+      display: none; /* Hides scrollbar for WebKit browsers */
+    }
+  }
